# prodigy

./: .gitignore  CLAUDE.md  flake.nix  pyproject.toml
src/prodigy/: config.py  generate.py  train.py
src/prodigy/data/: dataset.py  tokenizer.py
src/prodigy/model/: transformer.py
